fix element overflow on manage

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -3,7 +3,7 @@ main {
     max-height: 100vh;
     width: 100vw;
     height: 100vh;
-    padding: 2rem;
+    padding: 1rem 2rem;
     background: linear-gradient(
         to top,
         #3a3a3a,
