--- a/src/app/components/home/home.scss
+++ b/src/app/components/home/home.scss
@@ -85,7 +85,7 @@ main {
 
     section.manage {
         width: 100%;
-        max-height: 50vh;
+        max-height: 40vh;
         overflow: auto;
         padding: 1rem 0;
 
